# biofood

./: .gitignore  CONTRIBUTING.md  README.md
ai_part/: .env.exmaple  README.md  main.py  pyproject.toml
ai_part/src/: script.py
analytics/: main.py
analytics/src/: analyze.py  script.py
analytics/src/database/: __init__.py  common.py  session.py
analytics/src/domain/: exceptions.py  models.py  value_objects.py
backend/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_02_28_1426-94e4b8ded246_.py  2025_02_28_1552-58156e619c60_.py  (+3 more)
backend/src/backend/: app.py  (+2 more)
cms/: .env.exmaple  Dockerfile  pyproject.toml
cms/src/: app.py
cms/src/admin/: __init__.py  auth.py
cms/src/admin/models/: category.py  dish.py  order.py  order_item.py  shopping_cart_item.py  user.py
cms/src/database/: session.py
cms/src/database/orm/: mixins.py  orm.py
cms/src/database/orm_analyze/: orm.py
cms/src/domain/: common.py
frontend/: .gitignore  eslint.config.js  index.html  package.json  serviceWorker.js  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.tsx  index.css  main.tsx
infrastructure/: .env.example  .gitignore  README.md  compose-dev.yaml  compose.yaml  create-multiple-postgresql-databases.sh  docker-compose.yaml
infrastructure/docs/: README.md  main.c4  package.json
infrastructure/dumps/: biofoodCustomer.sql  biofoodModel.sql  biofood_analytics.sql  biofood_client.sql  biofood_customer.sql
models/: .gitignore  README.md  main.py  pyproject.toml
models/src/: analyze.py  script.py
models/src/database/: session.py
models/src/database/orm/: orm.py
models/src/database/orm_analyze/: __init__.py
pos-webview-app/: README.md  settings.gradle.kts
pos-webview-app/app/: build.gradle.kts
scripts/: downscale.sh
scripts/populate_db/: go.mod  go.sum
(+137 files in other folders)
